Done with javascript code

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
                 <p class="player-name">HUMAN</p>
                 <p class="human-score">0</p>
             </div>
+            <div class="DRAW">
+                <p class="player-name">DRAW</p>
+                <p class="draw-score">0</p>
+            </div>
             <div class="computer">
                 <p class="player-name">AI</p>
                 <p class="computer-score">0</p>
             </div>
+
         </div>
         <div class="move-img">
             <div class="human-img">
